--- a/resume.qmd
+++ b/resume.qmd
@@ -1,87 +1,37 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Ephraim Jensen's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Ephraim Jensen
+Computer Science Student.
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
-| <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
+<a href="admiralejj@gmail.com">admiralejj@gmail.com</a>
+| <a href="https://github.com/ephraimjensen">My GitHub page</a>
 </div>
 
 
 ## Currently
 
-Standing on the shoulders of giants
+Studying Computer Science at BYU-I (in a fuge state)
 
 ### Specialized in
 
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
+Machine Learning, Data Analyitics, Python, C#, R, SQL
 
 
 ### Research interests
 
-Cooling, power series, optics, alchemy, planetary motions, apples.
+Machine Learning, Software Development, Data Analysis
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`2020-2022`
+__Vale High School__
 
-`June 1661 - now`
-__Trinity College, Cambridge__
-
-- Sizar
-
-`1667 - death`
-__Trinity College, Cambridge__
-
-- Fellow
-
-
-
-## Awards
-
-`2012`
-President, *Royal Society*, London, UK
-
-Associate, *French Academy of Science*, Paris, France
-
-
-
-## Publications
-
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
-
-### Journals
-
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
-
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
-
-
-## Occupation
-
-`1600`
-__Royal Mint__, London
-
-- Warden
-- Minted coins
-
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
-
+`January 2023 - Now`
+__Brigham Young University - Idaho__
 
 
 <!-- ### Footer
